Bug 1772807 - Fix source links in SeaMonkey unoffcial about:buildconfig. r=frg a=frg
SeaMonkey 2.53 release branch only.

- Fix links to heptapod repositories.
- Allow showing a patch queue via the environment variable MOZ_PATCH_QUEUE_URL.

--- a/suite/base/content/buildconfig.html
+++ b/suite/base/content/buildconfig.html
@@ -43,6 +43,18 @@
     </td>
   </tr>
 #endif
+#ifdef MOZ_PATCH_QUEUE_URL
+  <tr>
+    <th>
+      Additional patch queue
+    </th>
+  </tr>
+  <tr>
+    <td>
+      <a href="@MOZ_PATCH_QUEUE_URL@">@MOZ_PATCH_QUEUE_URL@</a>
+    </td>
+  </tr>
+#endif
   </tbody>
 </table>
 
